one more commit

--- a/matmodel.tex
+++ b/matmodel.tex
@@ -1,15 +1,14 @@
-%
 % matmodel.tex
 % 
 
 %\subsection{Основные допущения}
 %\label{sec:assumptions}
 
-В настоящем разделе описана модель Био пороупругой среды.
-Приведенная модель является физически и геометрически линейной, то
-есть
-соответствует случаю малых отклонений полей, описывающих состоние
-среды, от своих равновесных (опорных) значений.
+%В настоящем разделе описана модель Био пороупругой среды.
+%Приведенная модель является физически и геометрически линейной, то
+%есть
+%соответствует случаю малых отклонений полей, описывающих состоние
+%среды, от своих равновесных (опорных) значений.
 
 
 % Основные допущения модели имеют вид:
@@ -75,408 +74,407 @@
 
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Вмещающая среда}\label{sec:poroelast}
-
-
-Будем считать, что динамическими эффектами (силами инерции) при
-описании напряженно-деформированного состояния вмещающей среды можно
-пренебречь (то есть процесс является квазистационарным).
-
-Рассмотрим случай малых деформаций.
-
-Пусть $\vcu = \vcu(\vc{x},t)$~-- вектор перемещений точек вмещающей
-(трещину) среды.  Симметричный тензор малых деформаций $\tn{E}$ имеет
-вид:.%\marginpar{Эйлеров или лагранжев, инфинитизимальный?}
+%\subsection{Вмещающая среда}\label{sec:poroelast}
 %
-\begin{equation*} 
-\tn{E}(\vc{u}) = \frac{1}{2} \left[\mathbf{\nabla} \tpr \vc{u} + (\mathbf{\nabla}\tpr \vc{u} )^{T} \right].  
-\end{equation*} 
-
-
-Уравнения механического равновесия (уравнения закона сохранения
-импульса) имеют вид:
 %
-\begin{equation} 
-\label{eq:equil} % %\label{GrindEQ__1_2_4_} 
-\mathbf{\nabla} \dpr \tn{T} + \rho \vc{g} = 0, 
-\end{equation} 
-где $\rho = \rho(\vc{x})$~-- плотность вмещающей среды, $\vc{g}$~-- ускорение свободного падения,
-$\tn{T}$~-- тензор напряжений.
+%Будем считать, что динамическими эффектами (силами инерции) при
+%описании напряженно-деформированного состояния вмещающей среды можно
+%пренебречь (то есть процесс является квазистационарным).
 %
-Описанные уравнения должны быть дополнены граничными условиями.
-
-В общем случае анизотропного пороупругого насыщенного тела определяющие соотношения 
-в дифференциальном виде имеют вид~\cite{coussy_2004}:
+%Рассмотрим случай малых деформаций.
 %
-\begin{gather}
-d\tn{T} = \tn{C}:d\tn{E} - \tn{B}dp - \tn{C}:\tn{A}d\Theta, \label{eq:dsigma}\\
-d\phi = \tn{B}:d\tn{E} + \frac{1}{N} dp - 3\alpha_\phi d\Theta, \label{eq:dphi} \\
-dS_s  = \tn{C} : \tn{A} : d\tn{E} - 3\alpha_\phi dp + \frac{C}{\Theta_0}d\Theta\label{eq:ds},
-\end{gather}
+%Пусть $\vcu = \vcu(\vc{x},t)$~-- вектор перемещений точек вмещающей
+%(трещину) среды.  Симметричный тензор малых деформаций $\tn{E}$ имеет
+%вид:.%\marginpar{Эйлеров или лагранжев, инфинитизимальный?}
+%%
+%\begin{equation*} 
+%\tn{E}(\vc{u}) = \frac{1}{2} \left[\mathbf{\nabla} \tpr \vc{u} + (\mathbf{\nabla}\tpr \vc{u} )^{T} \right].  
+%\end{equation*} 
 %
-где
 %
-$\tn{T}$~-- тензор напряжений, 
-$\tn{E}$~-- тензор деформаций,
-$\tn{C} = [C_{ijkl}]$~-- тензор упругих коэффициентов 4-го ранга (со стандартными свойствами симметрии $C_{ijkl}=C_{klij}=C_{jilk}$),
-$\tn{B} = B_{ij}$~-- симметричный тензор Био, 
-$\tn{A}=[\alpha_{ij}]$~-- симметричный тензор коэффициентов термического расширения, 
-$\Theta$~-- температура, 
-$\phi$~-- пористость,
-$\alpha_\phi$~-- объемный коэффициент термического расширения порового пространства,
-$N$~-- модуль Био, связывающий изменение пористости с изменением давления флюида, 
-$C$~--  коэффициент теплоемкости скелета при постоянном объеме, 
-$S_s$~-- энтропия скелета. 
-
+%Уравнения механического равновесия (уравнения закона сохранения
+%импульса) имеют вид:
+%%
+%\begin{equation} 
+%\label{eq:equil} % %\label{GrindEQ__1_2_4_} 
+%\mathbf{\nabla} \dpr \tn{T} + \rho \vc{g} = 0, 
+%\end{equation} 
+%где $\rho = \rho(\vc{x})$~-- плотность вмещающей среды, $\vc{g}$~-- ускорение свободного падения,
+%$\tn{T}$~-- тензор напряжений.
+%%
+%Описанные уравнения должны быть дополнены граничными условиями.
 %
-Интегрирование соотношений~\eqref{eq:dsigma}-\eqref{eq:ds} от начального (опорного) состояния до текущего дает:
-% %
-% \begin{gather*}
-% \tn{T} - \tn{T}_0 = \tn{C}:\tn{E} - \tn{B}(p-p_0) - \tn{C}:\tn{A}(\Theta-\Theta_0),\\
-% \phi - \phi_0 = \tn{B}:\tn{E} + \frac{1}{N} (p-p_0) - 3\alpha_\phi(\Theta-\Theta_0), \\
-% S_s - S_s^0 = \tn{C} : \tn{A} : \tn{E} - 3\alpha_\phi (p-p_0) + \frac{C}{\Theta_0}(\Theta-\Theta_0).
-% \end{gather*}
-% %
-\begin{gather*}
-\Delta\tn{T} = \tn{C}:\tn{E} - \tn{B} \Delta p - \tn{C}:\tn{A}\Delta \Theta,\;
-\Delta \phi = \tn{B}:\tn{E} + \frac{1}{N} \Delta p - 3\alpha_\phi\Delta \Theta, \\
-\Delta S_s = \tn{C} : \tn{A} : \tn{E} - 3\alpha_\phi \Delta p + \frac{C}{\Theta_0}\Delta\Theta,
-\end{gather*}
+%В общем случае анизотропного пороупругого насыщенного тела определяющие соотношения 
+%в дифференциальном виде имеют вид~\cite{coussy_2004}:
+%%
+%\begin{gather}
+%d\tn{T} = \tn{C}:d\tn{E} - \tn{B}dp - \tn{C}:\tn{A}d\Theta, \label{eq:dsigma}\\
+%d\phi = \tn{B}:d\tn{E} + \frac{1}{N} dp - 3\alpha_\phi d\Theta, \label{eq:dphi} \\
+%dS_s  = \tn{C} : \tn{A} : d\tn{E} - 3\alpha_\phi dp + \frac{C}{\Theta_0}d\Theta\label{eq:ds},
+%\end{gather}
+%%
+%где
+%%
+%$\tn{T}$~-- тензор напряжений, 
+%$\tn{E}$~-- тензор деформаций,
+%$\tn{C} = [C_{ijkl}]$~-- тензор упругих коэффициентов 4-го ранга (со стандартными свойствами симметрии $C_{ijkl}=C_{klij}=C_{jilk}$),
+%$\tn{B} = B_{ij}$~-- симметричный тензор Био, 
+%$\tn{A}=[\alpha_{ij}]$~-- симметричный тензор коэффициентов термического расширения, 
+%$\Theta$~-- температура, 
+%$\phi$~-- пористость,
+%$\alpha_\phi$~-- объемный коэффициент термического расширения порового пространства,
+%$N$~-- модуль Био, связывающий изменение пористости с изменением давления флюида, 
+%$C$~--  коэффициент теплоемкости скелета при постоянном объеме, 
+%$S_s$~-- энтропия скелета. 
 %
-где $\Delta f = f - f_0$ для какой-либо величины $f$.
-В случае изотропной среды имеем:
+%%
+%Интегрирование соотношений~\eqref{eq:dsigma}-\eqref{eq:ds} от начального (опорного) состояния до текущего дает:
+%% %
+%% \begin{gather*}
+%% \tn{T} - \tn{T}_0 = \tn{C}:\tn{E} - \tn{B}(p-p_0) - \tn{C}:\tn{A}(\Theta-\Theta_0),\\
+%% \phi - \phi_0 = \tn{B}:\tn{E} + \frac{1}{N} (p-p_0) - 3\alpha_\phi(\Theta-\Theta_0), \\
+%% S_s - S_s^0 = \tn{C} : \tn{A} : \tn{E} - 3\alpha_\phi (p-p_0) + \frac{C}{\Theta_0}(\Theta-\Theta_0).
+%% \end{gather*}
+%% %
+%\begin{gather*}
+%\Delta\tn{T} = \tn{C}:\tn{E} - \tn{B} \Delta p - \tn{C}:\tn{A}\Delta \Theta,\;
+%\Delta \phi = \tn{B}:\tn{E} + \frac{1}{N} \Delta p - 3\alpha_\phi\Delta \Theta, \\
+%\Delta S_s = \tn{C} : \tn{A} : \tn{E} - 3\alpha_\phi \Delta p + \frac{C}{\Theta_0}\Delta\Theta,
+%\end{gather*}
+%%
+%где $\Delta f = f - f_0$ для какой-либо величины $f$.
+%В случае изотропной среды имеем:
+%%
+%$\tn{C} = \lambda \tn{I}\tpr \tn{I} + 2G \tn{I}$,
+%$\tn{B} = b\tn{I}$, $\tn{A} = \alpha \tn{I}$,
+%%
+%% и определяющие соотношения можно записать в виде:
+%% %
+%% \begin{gather*}
+%% \tn{T} - \tn{T}_0 = 
+%% \left[ \lambda \epsilon \tn{I} + 2\mu\tn{E} \right] - b (p-p_0) - 3\alpha K(\Theta-\Theta_0)\tn{I}\\
+%% \phi - \phi_0 = b \epsilon + \frac{1}{N} (p-p_0) - 3\alpha_\phi(\Theta-\Theta_0), \\
+%% S_s - S_s^0 = 3\alpha K \epsilon  - 3\alpha_\phi (p-p_0) + \frac{C}{\Theta_0}(\Theta-\Theta_0),
+%% \end{gather*}
+%%
+%где 
+%$\lambda$, $G$~-- коэффициенты Ламе скелета, 
+%$\epsilon$~-- объемная деформация,
+%%
+%\(
+%\epsilon = \tn{E}:\tn{I} = E_{ii}
+%\),
+%%
+%\(
+%\lambda = K - (2/3)G
+%\),
+%%
+%-- объемный модуль упругости.
+%Здесь и далее индексом <<$0$>> отмечены значения параметров в начальный момент времени или их опорные значения.
 %
-$\tn{C} = \lambda \tn{I}\tpr \tn{I} + 2G \tn{I}$,
-$\tn{B} = b\tn{I}$, $\tn{A} = \alpha \tn{I}$,
 %
-% и определяющие соотношения можно записать в виде:
-% %
-% \begin{gather*}
-% \tn{T} - \tn{T}_0 = 
-% \left[ \lambda \epsilon \tn{I} + 2\mu\tn{E} \right] - b (p-p_0) - 3\alpha K(\Theta-\Theta_0)\tn{I}\\
-% \phi - \phi_0 = b \epsilon + \frac{1}{N} (p-p_0) - 3\alpha_\phi(\Theta-\Theta_0), \\
-% S_s - S_s^0 = 3\alpha K \epsilon  - 3\alpha_\phi (p-p_0) + \frac{C}{\Theta_0}(\Theta-\Theta_0),
-% \end{gather*}
+%Плотность $\rho$ в~\eqref{eq:equil} 
+%зависит от плотности скелета и флюида и пористости вмещающей среды: 
+%%
+%\(
+%\rho = (1-\phi) \rho_s +  \phi \rho_f,
+%\)
+%%
+%где
+%$\rho_s$~-- плотность скелета,
+%$\rho_f$~-- плотность флюида (см. раздел~\ref{sec:fluid_flow}).
 %
-где 
-$\lambda$, $G$~-- коэффициенты Ламе скелета, 
-$\epsilon$~-- объемная деформация,
+%% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\subsection{Уравнения течения жидкости во вмещающей среде }\label{sec:fluid_flow}
 %
-\(
-\epsilon = \tn{E}:\tn{I} = E_{ii}
-\),
+%В этом разделе рассмотрены уравнения течения (фильтрации) жидкости в пороупругой насыщенной среде,
+%которые представляют собой уравнения закона сохранения массы флюида.
 %
-\(
-\lambda = K - (2/3)G
-\),
+%Основное их отличие от <<обычных>> уравнений фильтрации в пористой среде заключается в том, 
+%что они учитывают изменение содержание жидкости (флюида) за счет деформации скелета породы.
 %
--- объемный модуль упругости.
-Здесь и далее индексом <<$0$>> отмечены значения параметров в начальный момент времени или их опорные значения.
-
-
-Плотность $\rho$ в~\eqref{eq:equil} 
-зависит от плотности скелета и флюида и пористости вмещающей среды: 
+%\subsubsection{Геометрические соотношения}\label{sec:vol}
 %
-\(
-\rho = (1-\phi) \rho_s +  \phi \rho_f,
-\)
+%При деформации породы происходит изменение объема, занятого
+%флюидом. Это изменение связано как с изменением объема скелета, так и
+%с изменением объема порового пространства за счет деформации скелета.
 %
-где
-$\rho_s$~-- плотность скелета,
-$\rho_f$~-- плотность флюида (см. раздел~\ref{sec:fluid_flow}).
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Уравнения течения жидкости во вмещающей среде }\label{sec:fluid_flow}
-
-В этом разделе рассмотрены уравнения течения (фильтрации) жидкости в пороупругой насыщенной среде,
-которые представляют собой уравнения закона сохранения массы флюида.
-
-Основное их отличие от <<обычных>> уравнений фильтрации в пористой среде заключается в том, 
-что они учитывают изменение содержание жидкости (флюида) за счет деформации скелета породы.
-
-\subsubsection{Геометрические соотношения}\label{sec:vol}
-
-При деформации породы происходит изменение объема, занятого
-флюидом. Это изменение связано как с изменением объема скелета, так и
-с изменением объема порового пространства за счет деформации скелета.
-
-В рамках рассматриваемого приближения бесконечно малых деформаций
-будем считать, что эйлеров и лагранжев подход описания деформации
-среды совпадают, все величины будем считать лагранжевыми (если не
-указано обратное).
-
-
-Пусть $d\omega$~-- элементарный объем пористой насыщенной среды в исходном состоянии, а $d\Omega$~-- в деформированном.
-Пусть в деформированном состоянии флюид занимает объем 
+%В рамках рассматриваемого приближения бесконечно малых деформаций
+%будем считать, что эйлеров и лагранжев подход описания деформации
+%среды совпадают, все величины будем считать лагранжевыми (если не
+%указано обратное).
 %
-\(
-n d\Omega,
-\)
 %
-где $n$~-- (эйлерова) пористость.  Введем лагранжеву (отнесенную к
-исходному состоянию) пористость $\phi$ соотношением:
+%Пусть $d\omega$~-- элементарный объем пористой насыщенной среды в исходном состоянии, а $d\Omega$~-- в деформированном.
+%Пусть в деформированном состоянии флюид занимает объем 
+%%
+%\(
+%n d\Omega,
+%\)
+%%
+%где $n$~-- (эйлерова) пористость.  Введем лагранжеву (отнесенную к
+%исходному состоянию) пористость $\phi$ соотношением:
+%%
+%\(%\begin{equation}\label{eq:vol1}
+%\phi d\omega = n d\Omega.
+%%\end{equation}
+%\)
+%%
+%Отсюда 
+%%
+%\(
+%%\begin{equation}\label{eq:vol2}
+%\phi = J n,
+%%\end{equation}
+%\)
+%% 
+%где $J = \det \tn{F}$, 
+%$\tn{F} = \tn{I} + \nabla\tpr \vc{u}$~-- тензор градиентов деформаций.
+%Величину 
+%%
+%\(
+%e = {n}/(1-n)
+%\)
+%%
+%будем называть приведенной пористостью (void ratio).
 %
-\(%\begin{equation}\label{eq:vol1}
-\phi d\omega = n d\Omega.
+%В предположении бесконечно малых деформаций имеем:
+%%
+%\(
+%J = \det F \approx 1 +  \nabla\dpr \vc{u} =  1 + \tr\tn{E}
+%\), 
+%где след тензора деформаций $\varepsilon = \tr\tn{E}$
+%характеризует изменение объема скелета породы, так что
+%%
+%\(
+%d\Omega = (1 + \varepsilon) d\omega.
+%\)
+%%
+%
+%Наблюдаемое макроскопическое изменение объема скелета обусловлено как изменением порового объема, так и 
+%изменением объема матрицы (хотя последняя величина не является наблюдаемой в макроскопическом эксперименте).
+%Аналогично ранее полученным выражениям, для изменения объема матрицы имеем:
+%%
+%\(
+%d\Omega^S = (1+\varepsilon^S) d\omega^S
+%\).
+%%
+%С учетом определения эйлеровой и лагранжевой пористости имеем:
+%%
+%$d\Omega^S = (1-n) d\Omega = d\Omega - \phi d\omega$,
+%$d\omega^S = (1-\phi_0) d\omega$,
+%%
+%где $\phi_0$~-- начальная пористость.
+%В выражениях выше индексом <<S>> обозначены величины, отнесенные не к 
+%пористой матрице, а к непосредственно \emph{скелету}, то есть (твердой
+%деформируемой) среде, из которой состоит пористая <<губка>>,
+%образующая матрицу.
+%
+%Комбинируя полученные выражения, получим выражение для описания
+%баланса объема в пористой насыщенной среде:
+%%
+%\(
+%\epsilon = (1-\phi_0)\epsilon^S + (\phi-\phi_0).
+%\)
+%%
+%
+%Если допустить, что изменение порового объема в основном обусловлено
+%деформацией скелета и изменением объема матрицы можно пренебречь, то
+%последнее выражение примет вид 
+%%
+%$\epsilon = \phi-\phi_0$.
+%В терминах приведенной пористости $e$ последнее соотношение можно
+%записать в виде 
+%$\epsilon = (e - e_0)/(1 + e_0)$.
+%
+%
+%\subsubsection{Определяющие соотношения для флюида}
+%
+%
+%Уравнение состояния для флюида в форме уравнения для внутренней энергии  имеет вид:
+%%
+%\begin{equation*}%\label{eq:fluid_eos_base}
+%de_f = -p d\left(\frac{1}{\rho_f}\right) + \Theta d s_f.
+%\end{equation*}
+%%
+%И далее:
+%%
+%\begin{equation}
+%\label{eq:fluid_eos}
+%\frac{d\rho_f}{\rho_f} = \frac{1}{K_f} dp - 3\alpha_f d\Theta,\quad ds_f = -3\alpha_f \frac{dp}{\rho_f} + C_p\frac{d\Theta}{\Theta},
 %\end{equation}
-\)
+%%
+%где $p$~-- давление флюида, $\rho_f$~-- его плотность, 
+%$3\alpha_s$~-- коэффициент температурного расширения флюида, 
+%$\Theta$~-- его температура, $s_f$~-- энтропия, $C_p$~-- теплоемкость при постоянном давлении, $K_f$~-- объемный модуль сжатия флюида.
+%% %
+%% \[
+%% K_f = - \frac{1}{1/\rho_f} \dudx{(1/\rho_f)}{p},\quad 
+%% -3\alpha_f = \frac{1}{(1/\rho_f)} \dudx{(1/\rho_f)}{\Theta}, \quad
+%% C_p = \Theta\dudx{s_f}{p} = \dudx{h_f}{\Theta},
+%% \]
+%% %
+%% $h_f$~-- энтальпия флюида:
+%% %
+%% \begin{gather*}
+%% h_f = e_f + \frac{p}{\rho_f};\quad
+%% h_f = h_f(p, s_f),\quad \frac{1}{\rho_f} = \dudx{h_f}{p},\quad \Theta = \frac{h_f}{s_f}.
+%% \end{gather*}
+%% % 
 %
-Отсюда 
+%В дальнейшем будем считать, что отклонения от начального состояния малы и  флюид слабо сжимаем, то есть
+%%
+%$K_f = \const$, $C_p = \const$, $\alpha_f = \const$
+%-- заданные параметры.
+%%
+%В этом случае из~\eqref{eq:fluid_eos} имеем:
+%%
+%\[
+%\frac{\rho_f - \rho_f^0}{\rho_f^0} = \frac{p-p_0}{K_f} - 3\alpha_f \frac{\Theta - \Theta_0}{\Theta_0},\quad
+%s_f - s_f^0 = -3\alpha_f\frac{p-p_0}{\rho_f^0}  + C_p\frac{\Theta - \Theta_0}{\Theta_0}.
+%\]
+%%
+%%где индексом <<$0$>> помечены опорные (начальные) значения параметров.
 %
-\(
-%\begin{equation}\label{eq:vol2}
-\phi = J n,
+%
+%В частном случае несжимаемой жидкости ($K_f\to\infty$, $\alpha_f = 0$) 
+%и малых изменений температуры имеем:
+%$\rho_f = \rho_f^0$, $\Delta s_f = C_p \Delta\Theta/\Theta_0$.
+%%
+%% \[
+%% \rho_f = \rho_f^0,\; s_f - s_f^0 = C_p \frac{\Theta-\Theta_0}{\Theta_0},
+%% \]
+%% %
+%
+%\subsubsection{Определяющие соотношения для насыщенной  среды}
+%
+%Пусть $m_f$~-- масса жидкости, отнесенная к единице объема в
+%лагранжевых координатах и определяемая соотношением
+%$\rho_f n d\Omega = m_f d\omega$,
+%%
+%откуда 
+%%
+%\begin{equation*}
+%%\label{eq:mf} 
+%m_f = \rho_f \phi.
+%\end{equation*}
+%%
+%
+%Из последнего соотношения следует, что 
+%%
+%\[
+%\frac{d m_f}{\rho_f} = d\phi + \phi \frac{d \rho_f}{\rho_f}.
+%\]
+%%
+%Тогда из~\eqref{eq:fluid_eos} следует
+%%
+%\[
+%d\phi = \frac{d m_f}{\rho_f} - \phi \left( \frac{d p}{K_f} + 3\alpha_f d\Theta \right),\quad 
+%d(m_f s_f) = s_f dm_f - 3 \phi \alpha_f dp + m_f C_p \frac{d\Theta}{\Theta}.
+%\]
+%%
+%
+%С учетом этого соотношения пористость $\phi$ может быть исключена из уравнений~\eqref{eq:dsigma}-\eqref{eq:ds},
+%которые с учетом~\eqref{eq:fluid_eos} можно будет представить в виде:
+%%
+%\begin{gather}
+%d\tn{T} = \tn{C}:d\tn{E} - \tn{B}dp - \tn{C}:\tn{A}d\Theta, \label{eq:dsigma:1}\\
+%\frac{dm_f}{\rho_f} = \tn{B}:d\tn{E} + \frac{1}{M} dp - 3\alpha_m d\Theta, \label{eq:dphi:1} \\
+%dS  = s_f dm_f + \tn{C} : \tn{A} : d\tn{E} - 3\alpha_m dp + \frac{C_d}{\Theta_0}d\Theta\label{eq:ds:1},
+%\end{gather}
+%%
+%где 
+%%
+%\[
+%S = S_s + m_f s_f,\; \frac{1}{M} = \frac{1}{N} + \frac{\phi}{K_f},\;\; 
+%\alpha_m = \alpha_\phi + \phi \alpha_f,\;\;
+%C_d = C + m_f C_p.
+%\]
+%
+%С учетом условий малых изменений свойств насыщенной среды, из~\eqref{eq:dphi:1} следует:
+%%
+%\begin{equation}
+%\label{eq:vf:1}
+%v_f = \tn{B}: (\tn{E} - \tn{E}_0) + \frac{1}{M} (p-p_0) - 3\alpha_m (\Theta-\Theta_0), %\label{eq:dphi:1} \\
 %\end{equation}
-\)
-% 
-где $J = \det \tn{F}$, 
-$\tn{F} = \tn{I} + \nabla\tpr \vc{u}$~-- тензор градиентов деформаций.
-Величину 
+%%
+%где $v_f$~-- относительное изменение объема жидкости в элементарном объеме насыщенной среды, которое определяется как
+%%
+%\begin{equation}
+%\label{eq:vf:2}
+%v_f = \frac{m_f - m_f^0}{\rho_f^0}.
+%\end{equation}
+%%
 %
-\(
-e = {n}/(1-n)
-\)
 %
-будем называть приведенной пористостью (void ratio).
-
-В предположении бесконечно малых деформаций имеем:
+%\subsubsection{Основные уравнения. Закон сохранения массы флюида}
 %
-\(
-J = \det F \approx 1 +  \nabla\dpr \vc{u} =  1 + \tr\tn{E}
-\), 
-где след тензора деформаций $\varepsilon = \tr\tn{E}$
-характеризует изменение объема скелета породы, так что
+%Уравнения механического равновесия (уравнения закона сохранения
+%импульса) для насыщенной среды были рассмотрены в
+%разделе~\ref{sec:poroelast}.  С учетом сделанных допущений плотность в
+%правой части уравнения~\eqref{eq:equil} задается выражением:
+%%
+%$\rho = (1-\phi_0) \rho_s^0 + \phi_0 \rho_f^0$.
+%%
 %
-\(
-d\Omega = (1 + \varepsilon) d\omega.
-\)
+%Уравнения закона сохранения массы для флюида имеют вид (с учетом
+%допущений о линейности модели и при отсутствии источников):
+%%
+%\begin{equation*}
+%%\label{eq:mb}
+%\dudx{m_f}{t} + \nabla\dpr (\vc{w}_m) = 0,\quad 
+%\vc{v} = \frac{\vc{w}_m}{\rho_f^0} = \tn{K}\dpr (-\nabla p + \rho_f^0 \vc{g}),
+%\end{equation*}
+%%
+%где
+%%
+%\(
+%\vc{w}_m = \rho_f^0 \vc{v}
+%\)
+%%
+%-- вектор плотности потока массы,
+%$\vc{v}$~-- скорость фильтрации, определяемая законом Дарси,
+%%
+%% \[
+%% \vc{v} = \frac{\vc{w}}{\rho_f^0} = \tn{K}\dpr (-\nabla p + \rho_f^0 \vc{g}),
+%% \]
+%%
+%$\rho_f^0$~-- плотность флюида в начальном состоянии, 
+%$m_f$~-- масса флюида в единице объема насыщенной среды, 
+%$\tn{K}$~-- симметричный тензор коэффициентов проницаемости.
 %
-
-Наблюдаемое макроскопическое изменение объема скелета обусловлено как изменением порового объема, так и 
-изменением объема матрицы (хотя последняя величина не является наблюдаемой в макроскопическом эксперименте).
-Аналогично ранее полученным выражениям, для изменения объема матрицы имеем:
+%Величина $m_f$ как функция состояния и свойств среды определяется соотношениями~\eqref{eq:vf:1}, \eqref{eq:vf:2}.
 %
-\(
-d\Omega^S = (1+\varepsilon^S) d\omega^S
-\).
+%\subsection{Закон сохранения энергии}
 %
-С учетом определения эйлеровой и лагранжевой пористости имеем:
+%Считая, что в элементарном объеме насыщенной среды скелет и флюид 
+%находятся в состоянии локального термодинамического равновесия,
+%уравнение закона сохранения энергии (при отсутствии внешних источников энергии) примет вид:
+%%
+%\[
+%\dudx{e}{t} + \nabla\dpr(h_f \vc{w}_m + \vc{q}_\Theta) = 0,\quad
+%\vc{q}_\Theta = -\tn{\Lambda} \nabla \Theta,
+%\]
+%%
+%где
+%$h_f$~-- энтальпия флюида,
+%$\vc{q}_\Theta$~-- вектор плотности теплового потока за счет эффектов теплопроводности,
+%$e$~-- полная внутренняя энергия элемента объема насыщенной среды,
+%%
+%\(
+%e = \rho_s (1-\phi)e_s + \rho_f\phi e_f
+%\),
+%$\Lambda$~-- симметричный тензор коэффициентов теплопроводности.
 %
-$d\Omega^S = (1-n) d\Omega = d\Omega - \phi d\omega$,
-$d\omega^S = (1-\phi_0) d\omega$,
-%
-где $\phi_0$~-- начальная пористость.
-В выражениях выше индексом <<S>> обозначены величины, отнесенные не к 
-пористой матрице, а к непосредственно \emph{скелету}, то есть (твердой
-деформируемой) среде, из которой состоит пористая <<губка>>,
-образующая матрицу.
-
-Комбинируя полученные выражения, получим выражение для описания
-баланса объема в пористой насыщенной среде:
-%
-\(
-\epsilon = (1-\phi_0)\epsilon^S + (\phi-\phi_0).
-\)
-%
-
-Если допустить, что изменение порового объема в основном обусловлено
-деформацией скелета и изменением объема матрицы можно пренебречь, то
-последнее выражение примет вид 
-%
-$\epsilon = \phi-\phi_0$.
-В терминах приведенной пористости $e$ последнее соотношение можно
-записать в виде 
-$\epsilon = (e - e_0)/(1 + e_0)$.
-
-
-\subsubsection{Определяющие соотношения для флюида}
-
-
-Уравнение состояния для флюида в форме уравнения для внутренней энергии  имеет вид:
-%
-\begin{equation*}%\label{eq:fluid_eos_base}
-de_f = -p d\left(\frac{1}{\rho_f}\right) + \Theta d s_f.
-\end{equation*}
-%
-И далее:
-%
-\begin{equation}
-\label{eq:fluid_eos}
-\frac{d\rho_f}{\rho_f} = \frac{1}{K_f} dp - 3\alpha_f d\Theta,\quad ds_f = -3\alpha_f \frac{dp}{\rho_f} + C_p\frac{d\Theta}{\Theta},
-\end{equation}
-%
-где $p$~-- давление флюида, $\rho_f$~-- его плотность, 
-$3\alpha_s$~-- коэффициент температурного расширения флюида, 
-$\Theta$~-- его температура, $s_f$~-- энтропия, $C_p$~-- теплоемкость при постоянном давлении, $K_f$~-- объемный модуль сжатия флюида.
-% %
-% \[
-% K_f = - \frac{1}{1/\rho_f} \dudx{(1/\rho_f)}{p},\quad 
-% -3\alpha_f = \frac{1}{(1/\rho_f)} \dudx{(1/\rho_f)}{\Theta}, \quad
-% C_p = \Theta\dudx{s_f}{p} = \dudx{h_f}{\Theta},
-% \]
-% %
-% $h_f$~-- энтальпия флюида:
-% %
-% \begin{gather*}
-% h_f = e_f + \frac{p}{\rho_f};\quad
-% h_f = h_f(p, s_f),\quad \frac{1}{\rho_f} = \dudx{h_f}{p},\quad \Theta = \frac{h_f}{s_f}.
-% \end{gather*}
-% % 
-
-В дальнейшем будем считать, что отклонения от начального состояния малы и  флюид слабо сжимаем, то есть
-%
-$K_f = \const$, $C_p = \const$, $\alpha_f = \const$
--- заданные параметры.
-%
-В этом случае из~\eqref{eq:fluid_eos} имеем:
-%
-\[
-\frac{\rho_f - \rho_f^0}{\rho_f^0} = \frac{p-p_0}{K_f} - 3\alpha_f \frac{\Theta - \Theta_0}{\Theta_0},\quad
-s_f - s_f^0 = -3\alpha_f\frac{p-p_0}{\rho_f^0}  + C_p\frac{\Theta - \Theta_0}{\Theta_0}.
-\]
-%
-%где индексом <<$0$>> помечены опорные (начальные) значения параметров.
-
-
-В частном случае несжимаемой жидкости ($K_f\to\infty$, $\alpha_f = 0$) 
-и малых изменений температуры имеем:
-$\rho_f = \rho_f^0$, $\Delta s_f = C_p \Delta\Theta/\Theta_0$.
-%
-% \[
-% \rho_f = \rho_f^0,\; s_f - s_f^0 = C_p \frac{\Theta-\Theta_0}{\Theta_0},
-% \]
-% %
-
-\subsubsection{Определяющие соотношения для насыщенной  среды}
-
-Пусть $m_f$~-- масса жидкости, отнесенная к единице объема в
-лагранжевых координатах и определяемая соотношением
-$\rho_f n d\Omega = m_f d\omega$,
-%
-откуда 
-%
-\begin{equation*}
-%\label{eq:mf} 
-m_f = \rho_f \phi.
-\end{equation*}
-%
-
-Из последнего соотношения следует, что 
-%
-\[
-\frac{d m_f}{\rho_f} = d\phi + \phi \frac{d \rho_f}{\rho_f}.
-\]
-%
-Тогда из~\eqref{eq:fluid_eos} следует
-%
-\[
-d\phi = \frac{d m_f}{\rho_f} - \phi \left( \frac{d p}{K_f} + 3\alpha_f d\Theta \right),\quad 
-d(m_f s_f) = s_f dm_f - 3 \phi \alpha_f dp + m_f C_p \frac{d\Theta}{\Theta}.
-\]
-%
-
-С учетом этого соотношения пористость $\phi$ может быть исключена из уравнений~\eqref{eq:dsigma}-\eqref{eq:ds},
-которые с учетом~\eqref{eq:fluid_eos} можно будет представить в виде:
-%
-\begin{gather}
-d\tn{T} = \tn{C}:d\tn{E} - \tn{B}dp - \tn{C}:\tn{A}d\Theta, \label{eq:dsigma:1}\\
-\frac{dm_f}{\rho_f} = \tn{B}:d\tn{E} + \frac{1}{M} dp - 3\alpha_m d\Theta, \label{eq:dphi:1} \\
-dS  = s_f dm_f + \tn{C} : \tn{A} : d\tn{E} - 3\alpha_m dp + \frac{C_d}{\Theta_0}d\Theta\label{eq:ds:1},
-\end{gather}
-%
-где 
-%
-\[
-S = S_s + m_f s_f,\; \frac{1}{M} = \frac{1}{N} + \frac{\phi}{K_f},\;\; 
-\alpha_m = \alpha_\phi + \phi \alpha_f,\;\;
-C_d = C + m_f C_p.
-\]
-
-С учетом условий малых изменений свойств насыщенной среды, из~\eqref{eq:dphi:1} следует:
-%
-\begin{equation}
-\label{eq:vf:1}
-v_f = \tn{B}: (\tn{E} - \tn{E}_0) + \frac{1}{M} (p-p_0) - 3\alpha_m (\Theta-\Theta_0), %\label{eq:dphi:1} \\
-\end{equation}
-%
-где $v_f$~-- относительное изменение объема жидкости в элементарном объеме насыщенной среды, которое определяется как
-%
-\begin{equation}
-\label{eq:vf:2}
-v_f = \frac{m_f - m_f^0}{\rho_f^0}.
-\end{equation}
-%
-
-
-\subsubsection{Основные уравнения. Закон сохранения массы флюида}
-
-Уравнения механического равновесия (уравнения закона сохранения
-импульса) для насыщенной среды были рассмотрены в
-разделе~\ref{sec:poroelast}.  С учетом сделанных допущений плотность в
-правой части уравнения~\eqref{eq:equil} задается выражением:
-%
-$\rho = (1-\phi_0) \rho_s^0 + \phi_0 \rho_f^0$.
-%
-
-Уравнения закона сохранения массы для флюида имеют вид (с учетом
-допущений о линейности модели и при отсутствии источников):
-%
-\begin{equation*}
-%\label{eq:mb}
-\dudx{m_f}{t} + \nabla\dpr (\vc{w}_m) = 0,\quad 
-\vc{v} = \frac{\vc{w}_m}{\rho_f^0} = \tn{K}\dpr (-\nabla p + \rho_f^0 \vc{g}),
-\end{equation*}
-%
-где
-%
-\(
-\vc{w}_m = \rho_f^0 \vc{v}
-\)
-%
--- вектор плотности потока массы,
-$\vc{v}$~-- скорость фильтрации, определяемая законом Дарси,
-%
-% \[
-% \vc{v} = \frac{\vc{w}}{\rho_f^0} = \tn{K}\dpr (-\nabla p + \rho_f^0 \vc{g}),
-% \]
-%
-$\rho_f^0$~-- плотность флюида в начальном состоянии, 
-$m_f$~-- масса флюида в единице объема насыщенной среды, 
-$\tn{K}$~-- симметричный тензор коэффициентов проницаемости.
-
-Величина $m_f$ как функция состояния и свойств среды определяется соотношениями~\eqref{eq:vf:1}, \eqref{eq:vf:2}.
-
-\subsection{Закон сохранения энергии}
-
-Считая, что в элементарном объеме насыщенной среды скелет и флюид 
-находятся в состоянии локального термодинамического равновесия,
-уравнение закона сохранения энергии (при отсутствии внешних источников энергии) примет вид:
-%
-\[
-\dudx{e}{t} + \nabla\dpr(h_f \vc{w}_m + \vc{q}_\Theta) = 0,\quad
-\vc{q}_\Theta = -\tn{\Lambda} \nabla \Theta,
-\]
-%
-где
-$h_f$~-- энтальпия флюида,
-$\vc{q}_\Theta$~-- вектор плотности теплового потока за счет эффектов теплопроводности,
-$e$~-- полная внутренняя энергия элемента объема насыщенной среды,
-%
-\(
-e = \rho_s (1-\phi)e_s + \rho_f\phi e_f
-\),
-$\Lambda$~-- симметричный тензор коэффициентов теплопроводности.
-
-Зависимости внутренней энергии от давления и температуры (уравнения
-состояния) могут быть получены непосредственно из
-уравнений~\eqref{eq:fluid_eos}, \eqref{eq:dsigma}-\eqref{eq:ds}.
+%Зависимости внутренней энергии от давления и температуры (уравнения
+%состояния) могут быть получены непосредственно из
+%уравнений~\eqref{eq:fluid_eos}, \eqref{eq:dsigma}-\eqref{eq:ds}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Упрощенная математическая модель}
+%\subsection{Упрощенная математическая модель}
 
-В настоящем разделе рассмотрим несколько упрощенный вариант описанной
-выше модели. Именно такая модель будет использовнна ниже при
+В настоящем разделе рассмотрим несколько упрощенный вариант модели, подробно описанной в ~\cite{Borisov2017}. Именно такая модель будет использовнна ниже при
 описании вычислительных алгоритмов и проведении тестовых расчетов. 
 
 Указанные упрощения не являются принципиальными и носят, скорее,
@@ -497,7 +495,7 @@ $\Lambda$~-- симметричный тензор коэффициентов т
 %
 где
 %
-$\tn{T} = \tn{T}' - b p \tn{I}$~-- тензор полных напряжений, 
+$\tn{T} = \tn{T}' - b p \tn{I}$~-- тензор полных напряжений, $p$~-- давление флюида,
 %
 \(
 \tn{T}' = \tn{C}:\tn{E}
