--- a/preprint_poro_Trimonova.tex
+++ b/preprint_poro_Trimonova.tex
@@ -21,6 +21,7 @@
 \usepackage{indentfirst}
 \usepackage{epsfig}
 
+
 \def\n{{\mathbf n}}
 
 %\usepackage{showkeys}
@@ -32,6 +33,7 @@
   \captiondelim{. }
 
 \usepackage{cite}
+
 
 % Для описания алгоритмов:
 \usepackage{algorithm}
@@ -133,14 +135,13 @@
 \vspace*{60mm}
 
 \large{В.Е.~Борисов, А.В.~Иванов, Б.В.~Критский,\\
-И.С.~Меньшов, Е.Б.~Савенков
+И.С.~Меньшов, Е.Б.~Савенков, М.А.~Тримонова
 }
 
 \vspace*{20mm}
 
 \textbf{\Large
-Численное моделирование задач
-пороупругости
+***
 }
 
 \vspace*{110mm}
@@ -159,8 +160,7 @@
 \thispagestyle{empty}
 
 \noindent\emph{ В.Е.~Борисов, А.В.~Иванов, Б.В.~Критский,
-И.С.~Меньшов, Е.Б.~Савенков} Численное моделирование задач
-пороупругости
+И.С.~Меньшов, Е.Б.~Савенков, М.А.~Тримонова} ***
 
 \vspace*{5mm}
 
@@ -180,7 +180,7 @@
 
 \vspace*{6mm}
 
-\noindent\emph{ V.E.~Borisov, \; A.V.~Ivanov, \; B.V.~Kritsky, \; I.S.~Men'shov, \; E.B.~Savenkov} \\Numerical simulation of poroelasticity problems
+\noindent\emph{ V.E.~Borisov, \; A.V.~Ivanov, \; B.V.~Kritsky, \; I.S.~Men'shov, \; E.B.~Savenkov, \; M.A.~Trimonova} \\***
 
 \vspace*{3mm}
 
@@ -221,15 +221,21 @@ simulations for a number of common test problems are presented.
 %
 \input{methods.tex}
 
-\section{Эксперимент}
+
+\section{Лабораторный эксперимент}
 \label{sec:experiment}
 %
 \input{experiment.tex}
 
-\section{Результаты расчетов}
-\label{sec:results}
+\section{Вычислительный  эксперимент}
+\label{sec:numerical_experiment}
 %
-\input{problem.tex}
+\input{numerical_experiment.tex}
+
+%\section{Результаты расчетов}
+%\label{sec:results}
+%
+%\input{problem.tex}
 
 \newpage
 % Заключение
