--- a/experiment.tex
+++ b/experiment.tex
@@ -33,7 +33,7 @@
 \caption{Фотография установки: вид сверху}\label{device2:pict}
 \end{figure}
 
-В обеих крышках и в боковине просверлены сквозные технологические отверстия диаметром 6~мм, оснащенные с внешней стороны приваренными резьбовыми штуцерами. В верхней крышке находится 29 отверстий, в нижней – 13, в боковине – 6. Эти отверстия могут использоваться как для монтажа различных датчиков, так и для обеспечения отбора или закачки флюида в коллектор. Поровое давление в модели измеряется через технологические отверстия, расположенные в нижней крышке установки, с помощью тензопреобразователей. Технологические отверстия заполняются водой и перед заливкой гипса закрываются поролоновыми вкладышами. Вкладыши на 4…5 мм выступают над поверхностью нижнего основания и после заливки гипса оказываются вмонтированы в него, обеспечивая передачу порового давления к тензопреобразователям. Схема расположения датчиков показана на рисунке ~\ref{device3:pict}.
+В обеих крышках и в боковине просверлены сквозные технологические отверстия диаметром 6~мм, оснащенные с внешней стороны приваренными резьбовыми штуцерами. В верхней крышке находится 29 отверстий, в нижней – 13, в боковине – 6. Эти отверстия могут использоваться как для монтажа различных датчиков, так и для обеспечения отбора или закачки флюида в коллектор. Поровое давление в модели измеряется через технологические отверстия, расположенные в нижней крышке установки, с помощью тензопреобразователей. Технологические отверстия заполняются водой и перед заливкой гипса закрываются поролоновыми вкладышами. Вкладыши на 5~мм выступают над поверхностью нижнего основания и после заливки гипса оказываются вмонтированы в него, обеспечивая передачу порового давления к тензопреобразователям. Схема расположения датчиков показана на рисунке ~\ref{device3:pict}.
 
 \begin{figure}[hb]
 \begin{center}
@@ -46,7 +46,7 @@
 
 Центральная скважина представляет собой латунную трубку диаметром 16~мм, которая герметично вставляется в нижнюю крышку установки. Трубка имеет возможность свободно вращаться вокруг вертикальной оси, позволяя ориентировать затравку трещины ГРП в заданном направлении. Верхний торец трубки закрыт винтовой пробкой. В средней части трубки проделана вертикальная прорезь, в которую вставляется сложенная вдвое тонкая латунная сетка, служащая затравкой трещины ГРП. Размер лепестков сетки составляет 8х8~мм. Углы лепестков срезаны примерно на 2~мм. После заливки гипса мы получаем обсаженную скважину с перфорированной стенкой и затравкой трещины ГРП.
 
-Эксперименты, как правило, проводятся на третьи сутки после заливки гипса, пока не высохнет гипс. После сборки экспериментальной установки модель нагружается небольшим вертикальным давлением (1…1,5 МПа), затем задается необходимое давление в боковых камерах. После этого вертикальное давление поднимается до рабочего значения. Перед началом эксперимента проводится дополнительное насыщение гипсового образца жидкостью под постоянным давлением закачки около 1~МПа на технологической нагнетательной скважине. Критерием завершения процесса насыщения служит стабилизация расхода на добывающей скважине и давлений в точках измерения порового давления. Обычно насыщение продолжается около 1 часа. Непосредственно после завершения процесса насыщения проводится эксперимент по ГРП.
+Эксперименты, как правило, проводятся на третьи сутки после заливки гипса, пока не высохнет гипс. После сборки экспериментальной установки модель нагружается небольшим вертикальным давлением (1~МПа), затем задается необходимое давление в боковых камерах. После этого вертикальное давление поднимается до рабочего значения. Перед началом эксперимента проводится дополнительное насыщение гипсового образца жидкостью под постоянным давлением закачки около 1~МПа на технологической нагнетательной скважине. Критерием завершения процесса насыщения служит стабилизация расхода на добывающей скважине и давлений в точках измерения порового давления. Обычно насыщение продолжается около 1 часа. Непосредственно после завершения процесса насыщения проводится эксперимент по ГРП.
 
 \subsection{Используемый материал}
 
@@ -68,38 +68,14 @@
 
 В настоящем разделе приведено описание одного из экспериментов. Эксперимент проводился без гидроразрыва пласта для  проверки теории однофазной фильтрации на кривых падения давления. Для этого во вспомогательные скважины сначала закачивался растрор гипса с целью насыщения образца и создания в нем стационарного поля порового давления, после чего давление в нагнетательной скважине сбрасывалось. Соответственно поровое давление в датчиках начинало спадать, и это фиксировалось в течение всего процесса падения давления. Давления в датчиках записывалось каждые 0.01 секунды. 
 
-Для создания этого эксперимента перед заливкой гипса на дно установки фиксировались вспомогательные скважины в точках с координатами [( 0.057, 0.127 ), (-0.057, -0.127)] и центральная скважина. На дно установки монтировались датчики давления согласно рисунку 4 в точках с координатами [(0.057, -0.127), (0.07, 0.0), (-0.057, 0.127), (0.0, 0.127), (0.0, -0.185), (0.065, 0.065), (-0.121, 0.121), (0.0, 0.07), (0.121, 0.121), (0.127, 0.0), (0.0, -0.07), (0.0, 0.0), (-0.185, 0.0)].  Измеренное в датчиках давление соответствовало давлению на расстоянии 4 мм от дна образца. Далее заливался гипс и высушивался в течение 2-3 дней. После затвердевания образца вспомогательные боковые скважины удалялись. Далее, как упоминалось выше, сверху на образец подавалось давление (20 атм, где $1 atm = 101335 Па$), имитируя литостатическое давление. Давление в боковых камерах не задавалось. После этого во вспомогательную скважину с координатами центра $(0.057, 0.127 )$ и радиусом 7.5~мм закачивался раствор гипса с постоянным давлением (14.5 атм). Другая скважина была соединена с атмосферой. Насыщение образца продолжалось до установления в нем стационарного режима. Установление режима определялось по давлению в  центре $(0, 0)$. Когда давление в ней достигало значения, равного полусумме давлений, заданных в боковых скважинах, и переставало меняться. После этого раствор в нагнетательную скважину переставал подаваться. Кривые давления в датчиках порового давления фиксировались в течение всего эксперимента (рисунок ~\ref{device4:pict}) . Длительность всего эксперимента составила примерно 220~мин. 
+Для создания этого эксперимента перед заливкой гипса на дно установки фиксировались вспомогательные скважины в точках с координатами [( 0.057, 0.127 ), (-0.057, -0.127)] и центральная скважина. На дно установки монтировались датчики давления согласно рисунку 4 в точках с координатами [(0.057, -0.127), (0.07, 0.0), (-0.057, 0.127), (0.0, 0.127), (0.0, -0.185), (0.065, 0.065), (-0.121, 0.121), (0.0, 0.07), (0.121, 0.121), (0.127, 0.0), (0.0, -0.07), (0.0, 0.0), (-0.185, 0.0)].  Измеренное в датчиках давление соответствовало давлению на расстоянии 4 мм от дна образца. Далее заливался гипс и высушивался в течение 2-3 дней. После затвердевания образца вспомогательные боковые скважины удалялись. Далее, как упоминалось выше, сверху на образец подавалось давление (20~атм, где 1~атм~=~101335~Па), имитируя литостатическое давление. Давление в боковых камерах не задавалось. После этого во вспомогательную скважину с координатами центра $(0.057, 0.127 )$ и радиусом 7.5~мм закачивался раствор гипса с постоянным давлением (14.5~атм). Другая скважина была соединена с атмосферой. Насыщение образца продолжалось до установления в нем стационарного режима. Установление режима определялось по давлению в  центре $(0, 0)$. Когда давление в ней достигало значения, равного полусумме давлений, заданных в боковых скважинах, и переставало меняться. После этого раствор в нагнетательную скважину переставал подаваться. Кривые давления в датчиках порового давления фиксировались в течение всего эксперимента (рисунок ~\ref{device4:pict}) . Длительность всего эксперимента составила примерно 220~мин. 
 
 \begin{figure}[hb]
 \begin{center}
-\epsfig{file=figs/picts/6, width=.5\textwidth}
+\epsfig{file=figs/picts/6, width=.6\textwidth}
 \end{center}
 \caption{Кривые давления в датчиках порового давления}\label{device4:pict}
 \end{figure}
 
-\section{Постановка задачи}
-\subsection{Граничные условия для задачи упругости}
 
-Схематеческий вид образца с прикладываемыми нагрузками представлен на рисунке~\ref{device5:pict}. На верхнюю поверхность образца прикладывалась вертикальная нагрузка перпендикулярно поверхности, поэтому вектор приложенной силы равен нормальной компоненте силы: $\vc{f}=\vc{f_n}=\sigma_n*\vc{n}$, где $\sigma_n=P_\text{top}$. Следовательно, на верхнюю поверхность ставится граничное условие Неймана на нормальное напряжение, равное вертикальной нагрузке: $\sigma_n = P_\text{top} = 20~atm$.
-
-\begin{figure}[hb]
-\begin{center}
-\epsfig{file=figs/picts/7, width=.4\textwidth}
-\end{center}
-\caption{Схематический вид образца с приклываемыми нагрузками}\label{device5:pict}
-\end{figure}
-
-Нижняя крышка установки зафиксирована жестко по вертикали, следовательно нижняя поверхность образца не может перемещаться вдоль оси $\mathcal{OZ}$ под действием вертикальной нагрузки. Таким образом, на низ образца ставится граничное условие Дирихле на перемещение (нулевое) по оси  $\mathcal{OZ}$: $u_z = 0$.
-
-Чтобы исключить поворот образца вокруг своей оси и сдвига образца в плоскости $\mathcal{OXY}$. Для исключения таких перемещений можно поставить граничное условие Дирихле на всю боковую поверхноть образца в виде нулевого касательного перемещения в плоскости XY: $\vc{u}*\vc{e_\tau}=0$, где  $\vc{u}=(u_x, u_y, u_z)$, $\vc{e_\tau}=(-n_y, n_x, 0)$. То есть, граничное условие может быть переписано в виде: $-n_y*u_x + n_x*u_y=0$
-
-Так же к граничным условиям для задачи упругости необходимо добавить условия на вспомогательные скважины, которые следуют из того факта, что в нагнетательную скважину закачивается жидкость под давлением, а добывающая связана с атмосферой. Таким образом, на скважины необходимо поставить условие Неймана на нормальные напряжение. На нагнетательную: $\sigma_n = P_\text{inj}=14.5~atm$; на добывающую: $\sigma_n =P_\text{prod}=1~atm$.
-
-\subsection{Граничные условия для задачи фильтрации}
-
-На верхнюю, нижнюю, боковую поверхности образца ставится условие непротикания. Это условие означает нулевой поток через данные поверхности, который, в свою очередь линейно зависит от градиента давления. То есть, граничное условие представляет собой условие Неймана на давление: $ \partial P/\partial\vc{n} = 0$
-
-На вспомогательные скважины сначала задаются постоянные давления: в нагнетательную скважину закачивается раствор гипса под давлением 14.5 атм, а добывающая скважина связана с атмосферой. После установления стационарного режима закачка раствора в нагнетательную скважину прекращается, а добывающая скважина так же связана с атмосферой. Таким образом, на всю поверхность нагнетательной скважины с координатами  $(0.057, 0.127 )$ ставится граничное условие Дирихле: $P_\text{inj}=14.5~atm$ до достиженя стационарного режима. Далее, когда подача раствора прекращается, на нее ставится уже условие Неймана  $ \partial P/\partial\vc{n} = 0$ до конца эксперимента. На добывающую скважину с координатами  $(-0.057, -0.127 )$ ставится граничное условие Дирихле в течение всего эксперимента: $P_\text{prod}=1~atm$.
-
-\section{Численный эксперимент}
 
