--- a/numerical_experiment.tex
+++ b/numerical_experiment.tex
@@ -1,4 +1,5 @@
 В данном разделе представлены результаты численного моделирования описанного выше эксперимнта. В первую очередь, ниже указаны граничные и начальные условия, используемые в математической модели, максимально соответствующие условиям эксперимента. Далее, после получения численных результатов, представлено сравнение кривых давления в точках нахождения датчиков порового давления.
+Основные уравнения модели приведены в разделе~\ref{sec:mat_model}.
 
 \subsection{Постановка задачи: граничные условия для задачи упругости}
 
@@ -11,11 +12,11 @@
 \caption{Схематический вид образца с приклываемыми нагрузками}\label{device5:pict}
 \end{figure}
 
-Нижняя крышка установки зафиксирована жестко по вертикали, следовательно нижняя поверхность образца не может перемещаться вдоль оси $\mathcal{OZ}$ под действием вертикальной нагрузки. Таким образом, на низ образца ставится граничное условие Дирихле на перемещение (нулевое) по оси  $\mathcal{OZ}$: $u_z = 0$.
+Нижняя крышка установки зафиксирована жестко по вертикали, следовательно нижняя поверхность образца не может перемещаться вдоль оси $\mathcal{O}Z$ под действием вертикальной нагрузки. Таким образом, на низ образца ставится граничное условие Дирихле на перемещение (нулевое) по оси  $\mathcal{O}Z$: $u_z = 0$.
 
-Чтобы исключить поворот образца вокруг своей оси и сдвига образца в плоскости $\mathcal{OXY}$. Для исключения таких перемещений можно поставить граничное условие Дирихле на всю боковую поверхноть образца в виде нулевого касательного перемещения в плоскости $\mathcal{OXY}$: $\vc{u} \cdot \vc{e_\tau}=0$, где  $\vc{u}=(u_x, u_y, u_z)$, $\vc{e_\tau}=(-n_y, n_x, 0)$. То есть, граничное условие может быть переписано в виде: $-n_y u_x + n_x u_y=0$
+Чтобы исключить поворот образца вокруг своей оси и сдвига образца в плоскости $\mathcal{O}XY$. Для исключения таких перемещений можно поставить граничное условие Дирихле на всю боковую поверхноть образца в виде нулевого касательного перемещения в плоскости $\mathcal{O}XY$: $\vc{u} \cdot \vc{e_\tau}=0$, где  $\vc{u}=(u_x, u_y, u_z)$, $\vc{e_\tau}=(-n_y, n_x, 0)$. То есть, граничное условие может быть переписано в виде: $-n_y u_x + n_x u_y=0$
 
-Так же к граничным условиям для задачи упругости необходимо добавить условия на вспомогательные скважины, которые следуют из того факта, что в нагнетательную скважину закачивается жидкость под давлением, а добывающая связана с атмосферой. Таким образом, на скважины необходимо поставить условие Неймана на нормальные напряжение. На нагнетательную: $\sigma_n = P_\text{inj}=14.5$~атм; на добывающую: $\sigma_n =P_\text{prod}=1$~атм.
+Так же к граничным условиям для задачи упругости необходимо добавить условия на вспомогательные скважины, которые следуют из того факта, что в нагнетательную скважину закачивается жидкость под давлением, а добывающая связана с атмосферой. Таким образом, на скважины необходимо поставить условие Неймана на полные нормальные напряжение: для нагнетательной: $\sigma_n = P_\text{inj}=14.5$~атм, для добывающей: $\sigma_n =P_\text{prod}=1$~атм.
 
 \subsection{Постановка задачи: граничные условия для задачи фильтрации}
 
