--- a/preprint_poro_Trimonova.tex
+++ b/preprint_poro_Trimonova.tex
@@ -244,13 +244,14 @@ simulations for a number of common test problems are presented.
 %
 \input{finish.tex}
 
+\clearpage
+
 %\newpage
 % Список обозначений
 %\section*{Список обозначений}
 %\addcontentsline{toc}{section}{Список обозначений}
 %\label{sec:result}
 %\input{desc.tex}
-
 
 % Литература
 %
