--- a/references.tex
+++ b/references.tex
@@ -10,10 +10,15 @@
 моделирование пластовых систем.  Институт компьютерных исследований,
 Москва-Ижевск, 2004, 416 с.
 
+\bibitem[Борисов2017]{borisov_2017} 
+Азиз Х., Сеттари Э.  Математическое
+моделирование пластовых систем.  Институт компьютерных исследований,
+Москва-Ижевск, 2004, 416 с.
+
 \bibitem[Biot1941]{biot_1941}
-Biot M.A. General theory of
-three dimensional consolidation // \emph{Journal of Applied Physics}, 1941. V.~12,
-pp. 155--164.
+Борисов В.Е., Иванов А.В., Критский Б.В., Меньшов И.С., Савенков Е.Б. Численное  моделирование задач
+пороупругости. Препринты ИПМ им. М.В.Келдыша. 2017. №81. 
+36 с.
 
 \bibitem[Brezzi1991]{brezzi1991}
 Brezzi~F., Fortin~M. Mixed and Hybrid Finite Elements Methods.
