--- a/experiment.tex
+++ b/experiment.tex
@@ -1,11 +1,11 @@
-В настоящем разделе описывается лабораторная установка, на экспериментальных данных которой будет верифицироваться численная модель. Данная установка была разработана в ИДГ РАН~\cite{trimonova2017, trimonova2018}. К ее основным возможностям можно отнести: исследования гидроразрыва пласта и сопуствующих ему процессов, создание трехмерного напряженно-деформированного состояния, изучение нестабильных трещин на нагнетательных скважинах, моделирование взаимодействия трещин и многое другое. Ниже будут описаны особенности уставновки, важные с точки зрения математического моделирования протекающих в ней процессов.
+В настоящем разделе описывается лабораторная установка, на экспериментальных данных которой будет верифицироваться численная модель. Данная установка была разработана в Институте динамики геосфер Российской академии наук~\cite{trimonova2017, trimonova2018}. К ее основным возможностям можно отнести: исследования гидроразрыва пласта и сопуствующих ему процессов, создание трехмерного напряженно-деформированного состояния, изучение неустойчивых трещин на нагнетательных скважинах, моделирование взаимодействия трещин и многое другое. Ниже будут описаны особенности уставновки, важные с точки зрения математического моделирования протекающих в ней процессов.
 
 \subsection{Описание установки}
 Конструктивно установка для моделирования процессов в плоском коллекторе состоит из верхней и нижней крышек, в кольцевом углублении которых фиксируется боковина.      Схематический внешний вид установки показан на рисунке~\ref{device:pict}. Между собой крышки скрепляются шестнадцатью шпильками, которые на рисунке не показаны. Толщина крышек составляет  75~мм при наружном диаметре 600~мм. Высота боковины равна 70~мм при внутреннем диметре 430~мм и толщине стенки 25~мм.
 
 \begin{figure}[hb]
 \begin{center}
-\epsfig{file=figs/picts/1, width=.5\textwidth}
+\epsfig{file=figs/picts/1, width=.6\textwidth}
 \end{center}
 \caption{Схема плоской модельной установки}\label{device:pict}
 \end{figure}
@@ -33,7 +33,7 @@
 \caption{Фотография установки: вид сверху}\label{device2:pict}
 \end{figure}
 
-В обеих крышках и в боковине просверлены сквозные технологические отверстия диаметром 6~мм, оснащенные с внешней стороны приваренными резьбовыми штуцерами. В верхней крышке находится 29 отверстий, в нижней – 13, в боковине – 6. Эти отверстия могут использоваться как для монтажа различных датчиков, так и для обеспечения отбора или закачки флюида в коллектор. Поровое давление в модели измеряется через технологические отверстия, расположенные в нижней крышке установки, с помощью тензопреобразователей. Технологические отверстия заполняются водой и перед заливкой гипса закрываются поролоновыми вкладышами. Вкладыши на 5~мм выступают над поверхностью нижнего основания и после заливки гипса оказываются вмонтированы в него, обеспечивая передачу порового давления к тензопреобразователям. Схема расположения датчиков показана на рисунке ~\ref{device3:pict}.
+В обеих крышках и в боковине просверлены сквозные технологические отверстия диаметром 6~мм, оснащенные с внешней стороны приваренными резьбовыми штуцерами. В верхней крышке находится 29 отверстий, в нижней~---13, в боковине~---6. Эти отверстия могут использоваться как для монтажа различных датчиков, так и для обеспечения отбора или закачки флюида в коллектор. Поровое давление в модели измеряется через технологические отверстия, расположенные в нижней крышке установки, с помощью тензопреобразователей. Технологические отверстия заполняются водой и перед заливкой гипса закрываются поролоновыми вкладышами. Вкладыши на 5~мм выступают над поверхностью нижнего основания и после заливки гипса оказываются вмонтированы в него, обеспечивая передачу порового давления к тензопреобразователям. Схема расположения датчиков показана на рисунке~\ref{device3:pict}.
 
 \begin{figure}[hb]
 \begin{center}
@@ -42,17 +42,24 @@
 \caption{Схема расположения датчиков в нижней и верхней крышках}\label{device3:pict}
 \end{figure}
 
-Вспомогательные скважины, необходимые для прокачки насыщенного раствора сульфата кальция (гипса) через образец и для создания поля порового давления в нем, формируются при отливке образца путем помещения в него заранее вставок из фторопласта диаметром 15~мм в центрально симметричные технологические отверстия (рисунок \ref{device2:pict}). После затвердевания гипса вставки вынимаются, а сами образовавшиеся скважины закрываются фторопластовыми крышками.
+Вспомогательные скважины, необходимые для прокачки насыщенного раствора сульфата кальция (гипса) через образец и для создания поля порового давления в нем, формируются при отливке образца путем помещения в него заранее вставок из фторопласта диаметром 15~мм в центрально симметричные технологические отверстия (рисунок~\ref{device2:pict}). После затвердевания гипса вставки вынимаются, а сами образовавшиеся скважины закрываются фторопластовыми крышками.
 
-Центральная скважина представляет собой латунную трубку диаметром 16~мм, которая герметично вставляется в нижнюю крышку установки. Трубка имеет возможность свободно вращаться вокруг вертикальной оси, позволяя ориентировать затравку трещины ГРП в заданном направлении. Верхний торец трубки закрыт винтовой пробкой. В средней части трубки проделана вертикальная прорезь, в которую вставляется сложенная вдвое тонкая латунная сетка, служащая затравкой трещины ГРП. Размер лепестков сетки составляет 8х8~мм. Углы лепестков срезаны примерно на 2~мм. После заливки гипса мы получаем обсаженную скважину с перфорированной стенкой и затравкой трещины ГРП.
+Центральная скважина представляет собой латунную трубку диаметром 16~мм, которая герметично вставляется в нижнюю крышку установки. Трубка имеет возможность свободно вращаться вокруг вертикальной оси, позволяя ориентировать затравку трещины гидроразрыва пласта (ГРП) в заданном направлении. Верхний торец трубки закрыт винтовой пробкой. В средней части трубки проделана вертикальная прорезь, в которую вставляется сложенная вдвое тонкая латунная сетка, служащая затравкой трещины ГРП. Размер лепестков сетки составляет 8х8~мм. Углы лепестков срезаны примерно на 2~мм. После заливки гипса мы получаем обсаженную скважину с перфорированной стенкой и затравкой трещины ГРП.
 
-Эксперименты, как правило, проводятся на третьи сутки после заливки гипса, пока не высохнет гипс. После сборки экспериментальной установки модель нагружается небольшим вертикальным давлением (1~МПа), затем задается необходимое давление в боковых камерах. После этого вертикальное давление поднимается до рабочего значения. Перед началом эксперимента проводится дополнительное насыщение гипсового образца жидкостью под постоянным давлением закачки около 1~МПа на технологической нагнетательной скважине. Критерием завершения процесса насыщения служит стабилизация расхода на добывающей скважине и давлений в точках измерения порового давления. Обычно насыщение продолжается около 1 часа. Непосредственно после завершения процесса насыщения проводится эксперимент по ГРП.
+Эксперименты, как правило, проводятся на третьи сутки после заливки гипса, когда высохнет гипс. После сборки экспериментальной установки модель нагружается небольшим вертикальным давлением (1~МПа), затем задается необходимое давление в боковых камерах. После этого вертикальное давление поднимается до рабочего значения. Перед началом эксперимента проводится дополнительное насыщение гипсового образца жидкостью под постоянным давлением закачки около 1~МПа на технологической нагнетательной скважине. Критерием завершения процесса насыщения служит стабилизация расхода на добывающей скважине и давлений в точках измерения порового давления. Обычно насыщение продолжается около 1~часа. Непосредственно после завершения процесса насыщения проводится эксперимент по ГРП.
 
-\subsection{Используемый материал}
+\subsection{Модельная среда}
 
-Выбор среды, моделирующей коллектор, определяется постановкой решаемых экспериментальных задач. Целью данного исследования является экспериментальное моделирование ГРП с возможностью переноса результатов экспериментов на пластовые условия. Но помимо критериев подобия, отвечающих за возможность такого переноса~\cite{cleary1994}, важнейшую роль играют технологические факторы, связанные с возможностью изготовления экспериментальных образцов. С этой точки зрения смесь на основе гипса с добавкой портландцемента является хорошим выбором. Хорошая текучесть смеси и отсутствие усадки при затвердевании позволяет добиться плотного контакта со стенками установки. Для замедления схватывания гипса в воду для приготовления смеси добавляется лимонная кислота в концентрации 2 г/дм$^3$. Описание экспериментов по определению прочностных и фильтрационных характеристик образца можно найти  в~\cite{trimonova2017, trimonova2018}. 
+Выбор среды, моделирующей коллектор, определяется целью и постановкой решаемых экспериментальных задач. Целью данного исследования является экспериментальное моделирование ГРП с возможностью переноса результатов экспериментов на пластовые условия. Выбор материала модельного образца связан с двумя основными условиями:
+\begin{itemize}
+\item
+критерии подобия, отвечающие за возможность переноса данных с эксперимента на пласт~\cite{cleary1994};
+\item
+технологические факторы, связанные с возможностью изготовления экспериментальных образцов.
+\end{itemize}
+С этой точки зрения смесь на основе гипса с добавкой портландцемента является хорошим выбором. Хорошая текучесть смеси и отсутствие усадки при затвердевании позволяет добиться плотного контакта со стенками установки. Для замедления "схватывания" гипса в воду для приготовления смеси добавляется лимонная кислота в концентрации 2~г/дм$^3$.
 
-Следующие величины были получены экспериментально:
+В рассматриваемых далее экспериментах среда обладает следующими свойствами.
 \begin{description}
 %
 \item $\nu_\text{dyn} \;\;\,  = 0.25$~-- динамический коэффициент Пуассона,
@@ -64,11 +71,13 @@
 %
 \end{description}
 
+Описание экспериментов по определению данных прочностных и фильтрационных характеристик образца можно найти  в~\cite{trimonova2017, trimonova2018}. 
+
 \subsection{Описание эксперимента}
 
 В настоящем разделе приведено описание одного из экспериментов. Эксперимент проводился без гидроразрыва пласта для  проверки теории однофазной фильтрации на кривых падения давления. Для этого во вспомогательные скважины сначала закачивался растрор гипса с целью насыщения образца и создания в нем стационарного поля порового давления, после чего давление в нагнетательной скважине сбрасывалось. Соответственно поровое давление в датчиках начинало спадать, и это фиксировалось в течение всего процесса падения давления. Давления в датчиках записывалось каждые 0.01 секунды. 
 
-Для создания этого эксперимента перед заливкой гипса на дно установки фиксировались вспомогательные скважины в точках с координатами [( 0.057, 0.127 ), (-0.057, -0.127)] и центральная скважина. На дно установки монтировались датчики давления согласно рисунку 4 в точках с координатами [(0.057, -0.127), (0.07, 0.0), (-0.057, 0.127), (0.0, 0.127), (0.0, -0.185), (0.065, 0.065), (-0.121, 0.121), (0.0, 0.07), (0.121, 0.121), (0.127, 0.0), (0.0, -0.07), (0.0, 0.0), (-0.185, 0.0)].  Измеренное в датчиках давление соответствовало давлению на расстоянии 4 мм от дна образца. Далее заливался гипс и высушивался в течение 2-3 дней. После затвердевания образца вспомогательные боковые скважины удалялись. Далее, как упоминалось выше, сверху на образец подавалось давление (20~атм, где 1~атм~=~101335~Па), имитируя литостатическое давление. Давление в боковых камерах не задавалось. После этого во вспомогательную скважину с координатами центра $(0.057, 0.127 )$ и радиусом 7.5~мм закачивался раствор гипса с постоянным давлением (14.5~атм). Другая скважина была соединена с атмосферой. Насыщение образца продолжалось до установления в нем стационарного режима. Установление режима определялось по давлению в  центре $(0, 0)$. Когда давление в ней достигало значения, равного полусумме давлений, заданных в боковых скважинах, и переставало меняться. После этого раствор в нагнетательную скважину переставал подаваться. Кривые давления в датчиках порового давления фиксировались в течение всего эксперимента (рисунок ~\ref{device4:pict}) . Длительность всего эксперимента составила примерно 220~мин. 
+Для создания этого эксперимента перед заливкой гипса на дно установки фиксировались вспомогательные скважины в точках с координатами [( 0.057, 0.127 ), (-0.057, -0.127)] и центральная скважина. На дно установки монтировались датчики давления согласно рисунку 4 в точках с координатами [(0.057, -0.127), (0.07, 0.0), (-0.057, 0.127), (0.0, 0.127), (0.0, -0.185), (0.065, 0.065), (-0.121, 0.121), (0.0, 0.07), (0.121, 0.121), (0.127, 0.0), (0.0, -0.07), (0.0, 0.0), (-0.185, 0.0)].  Измеренное в датчиках давление соответствовало давлению на расстоянии 4 мм от дна образца. Далее в установку заливался гипс и высушивался в течение 2-3 дней. После затвердевания образца вспомогательные боковые скважины удалялись. Далее, как упоминалось выше, сверху на образец подавалось давление (20~атм, где 1~атм~=~101335~Па), имитируя литостатическое давление. Давление в боковых камерах не задавалось. После этого во вспомогательную скважину с координатами центра $(0.057, 0.127 )$ и радиусом 7.5~мм закачивался раствор гипса с постоянным давлением (14.5~атм). Другая скважина была соединена с атмосферой. Насыщение образца продолжалось до установления в нем стационарного режима. Установление режима определялось по давлению в  центре образца, в точке с координатами $(0, 0)$. Когда давление в ней достигало значения, равного полусумме давлений, заданных в боковых скважинах. После этого раствор в нагнетательную скважину переставал подаваться. Кривые давления в датчиках порового давления фиксировались в течение всего эксперимента (рисунок~\ref{device4:pict}) . Длительность всего эксперимента составила примерно 220~мин. 
 
 \begin{figure}[hb]
 \begin{center}
